LPS-147155 Build Lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -13350,6 +13350,7 @@ servers=الخادم
 service=الخدمة
 service-access-policy-entry-default-asset-entry-title=الوصول العام إلى واجهة برمجة التطبيقات لإدخال الأصل
 service-access-policy-entry-default-calendar-title=الوصول العام إلى واجهة برمجة تطبيقات بحث التقويم
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=اسم سياسة الوصول إلى الخدمة
 service-access-policy-name-is-required=اسم سياسة الوصول إلى الخدمة مطلوب.
 service-access-policy-title-is-required=عنوان سياسة الوصول إلى الخدمة مطلوب.
