--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -13350,6 +13350,7 @@ servers=Сървър
 service=Услуга
 service-access-policy-entry-default-asset-entry-title=Публичен достъп до API за запис на активи (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Публичен достъп до API за търсене на календар (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Име на правилата за достъп до услугата (Automatic Translation)
 service-access-policy-name-is-required=Изисква се име на правилата за достъп до услугата. (Automatic Translation)
 service-access-policy-title-is-required=Изисква се заглавие на правилата за достъп до услугата. (Automatic Translation)
