--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -13352,6 +13352,7 @@ servers=Servidors
 service=Servei
 service-access-policy-entry-default-asset-entry-title=Accés públic a l'API de l'entrada de contingut
 service-access-policy-entry-default-calendar-title=Accés públic a l'API de cerca de calendari
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nom de la norma d'accés al servei
 service-access-policy-name-is-required=Es requereix un nom de la política d'accés al servei.
 service-access-policy-title-is-required=Es requereix un títol de política d'accés al servei.
