--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -13350,6 +13350,7 @@ servers=Servery
 service=Služba
 service-access-policy-entry-default-asset-entry-title=Veřejný přístup k rozhraní API pro zadávání majetku (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Veřejný přístup k rozhraní API pro vyhledávání v kalendáři (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Název zásad přístupu ke službě (Automatic Translation)
 service-access-policy-name-is-required=Je vyžadován název zásad přístupu ke službě. (Automatic Translation)
 service-access-policy-title-is-required=Je vyžadován název zásad přístupu ke službě. (Automatic Translation)
