--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -13350,6 +13350,7 @@ servers=Servers (Automatic Copy)
 service=Tjeneste
 service-access-policy-entry-default-asset-entry-title=Offentlig adgang til API'en for aktivposter (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Offentlig adgang til API'en til kalendersøgning (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Navn på serviceadgangspolitik (Automatic Translation)
 service-access-policy-name-is-required=Navn på politik for tjenesteadgang er påkrævet. (Automatic Translation)
 service-access-policy-title-is-required=Titel på politik for tjenesteadgang er påkrævet. (Automatic Translation)
