--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -13352,6 +13352,7 @@ servers=Server
 service=Dienst
 service-access-policy-entry-default-asset-entry-title=Öffentlicher Zugriff auf das Asset-Eintrag-API
 service-access-policy-entry-default-calendar-title=Öffentlicher Zugriff auf Such-API des Kalenders
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Name der Service-Zugriffsrichtlinie
 service-access-policy-name-is-required=Name der Zugriffsrichtlinie ist erforderlich.
 service-access-policy-title-is-required=Titel der Zugriffsrichtlinie ist erforderlich.
