--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -13350,6 +13350,7 @@ servers=Διακομιστές (Automatic Translation)
 service=Υπηρεσία
 service-access-policy-entry-default-asset-entry-title=Πρόσβαση του κοινού στο API καταχώρησης περιουσιακών στοιχείων (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Πρόσβαση του κοινού στο API αναζήτησης ημερολογίου (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Όνομα πολιτικής πρόσβασης υπηρεσίας (Automatic Translation)
 service-access-policy-name-is-required=Απαιτείται όνομα πολιτικής πρόσβασης υπηρεσίας. (Automatic Translation)
 service-access-policy-title-is-required=Απαιτείται τίτλος πολιτικής πρόσβασης υπηρεσίας. (Automatic Translation)
