--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -13352,6 +13352,7 @@ servers=Servidores
 service=Servicio
 service-access-policy-entry-default-asset-entry-title=Acceso público a la API de entrada de activos
 service-access-policy-entry-default-calendar-title=Acceso público al API de búsqueda en calendarios
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nombre de la política de acceso del servicio
 service-access-policy-name-is-required=El nombre de la política de acceso a servicios es necesario.
 service-access-policy-title-is-required=El título de la política de acceso a servicios es necesario.
