--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -13350,6 +13350,7 @@ servers=Serverid (Automatic Translation)
 service=Teenus
 service-access-policy-entry-default-asset-entry-title=Avalik juurdepääs varakirje API-le (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Avalik juurdepääs kalendriotsingu API-le (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Teenuse juurdepääsupoliitika nimi (Automatic Translation)
 service-access-policy-name-is-required=Teenuse juurdepääsupoliitika nimi on nõutav. (Automatic Translation)
 service-access-policy-title-is-required=Teenuse juurdepääsupoliitika tiitel on nõutav. (Automatic Translation)
