--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -13350,6 +13350,7 @@ servers=سرورها
 service=سرويس
 service-access-policy-entry-default-asset-entry-title=دسترسی عمومی به API منابع
 service-access-policy-entry-default-calendar-title=دسترسی عمومی به API جستجوی تقویم
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=نام سیاست دسترسی سرویس (Automatic Translation)
 service-access-policy-name-is-required=نام سیاست دسترسی به خدمات مورد درخواست است.
 service-access-policy-title-is-required=عنوان سیاست دسترسی به خدمات مورد درخواست است.
