--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -13349,6 +13349,7 @@ servers=Palvelin
 service=Palvelu
 service-access-policy-entry-default-asset-entry-title=Julkinen Käyttöoikeus Sisältömerkinnän Rajapintaan
 service-access-policy-entry-default-calendar-title=Julkinen Käyttöoikeus Kalenterihaun Rajapintaan
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Palvelun Käytön Käytännenimi
 service-access-policy-name-is-required=Palvelukäytännän nimi on vaadittu.
 service-access-policy-title-is-required=Palvelukäytännön otsikko on vaadittu.
