--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -13350,6 +13350,7 @@ servers=Serveurs
 service=Service
 service-access-policy-entry-default-asset-entry-title=Accès public à l'API des entrées d'actifs
 service-access-policy-entry-default-calendar-title=Accès public à l'API de recherche de calendrier
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nom de la police d'accès au service
 service-access-policy-name-is-required=Nom de politique d'accès aux services est requis.
 service-access-policy-title-is-required=Titre de politique d'accès aux services est requis.
