--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -13350,6 +13350,7 @@ servers=Servidores
 service=Servizo
 service-access-policy-entry-default-asset-entry-title=Public Access to the Asset Entry API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=Public Access to the Calendar Search API (Automatic Copy)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Service Access Policy Name (Automatic Copy)
 service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
 service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
