--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -13350,6 +13350,7 @@ servers=सर्वर्स
 service=सर्विस
 service-access-policy-entry-default-asset-entry-title=सार्वजनिक प्रवेश एसेट एंट्री एपीआई के लिए
 service-access-policy-entry-default-calendar-title=कैलेंडर खोज एपीआई के लिए सार्वजनिक पहुँच
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=सेवा पहुंच नीति का नाम (Automatic Translation)
 service-access-policy-name-is-required=सेवा पहुंच नीति का नाम आवश्यक है। (Automatic Translation)
 service-access-policy-title-is-required=सेवा पहुंच नीति शीर्षक की आवश्यकता है। (Automatic Translation)
