--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -13353,6 +13353,7 @@ servers=Kiszolgálók
 service=Szolgáltatás
 service-access-policy-entry-default-asset-entry-title=Nyilvános hozzáférés a Tartalom bejegyzés API-hoz
 service-access-policy-entry-default-calendar-title=Nyilvános hozzáférés a Naptári keresés API-hoz
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Szolgáltatáselérési házirend
 service-access-policy-name-is-required=A szolgáltatás hozzáférési házirend név kötelező.
 service-access-policy-title-is-required=A szolgáltatás hozzáférési házirend címke kötelező.
