--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -13350,6 +13350,7 @@ servers=Server
 service=Layanan
 service-access-policy-entry-default-asset-entry-title=Akses Publik ke API Entri Aset (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Akses Publik ke API Pencarian Kalender (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nama Kebijakan Akses Layanan (Automatic Translation)
 service-access-policy-name-is-required=Nama kebijakan akses layanan diperlukan. (Automatic Translation)
 service-access-policy-title-is-required=Diperlukan judul kebijakan akses layanan. (Automatic Translation)
