--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -13351,6 +13351,7 @@ servers=Server
 service=Servizio
 service-access-policy-entry-default-asset-entry-title=Accesso pubblico all'API di immissione delle risorse (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Accesso pubblico alle API di ricerca del calendario
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nome criterio di accesso al servizio (Automatic Translation)
 service-access-policy-name-is-required=Nome politica accesso servizio richiesto.
 service-access-policy-title-is-required=Titolo politica accesso servizio richiesto.
