--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -13350,6 +13350,7 @@ servers=שרתים
 service=שירות
 service-access-policy-entry-default-asset-entry-title=גישה ציבורית ל- API של הזנת נכסים (Automatic Translation)
 service-access-policy-entry-default-calendar-title=גישה ציבורית אל API חיפוש בלוח שנהI
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=שם מדיניות שירות גישה
 service-access-policy-name-is-required=שם מדיניות גישה לשירות הוא חובה.
 service-access-policy-title-is-required=.כותר מדיניות גישה לשירות הוא חובה
