--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -13352,6 +13352,7 @@ servers=サーバ
 service=サービス
 service-access-policy-entry-default-asset-entry-title=アセットエントリーAPIを一般公開
 service-access-policy-entry-default-calendar-title=カレンダー検索APIを一般公開
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=サービス アクセス ポリシー名
 service-access-policy-name-is-required=サービスアクセスポリシーは必須です
 service-access-policy-title-is-required=サービスアクセスポリシーのタイトルは必須です
