--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -13350,6 +13350,7 @@ servers=서버
 service=서비스
 service-access-policy-entry-default-asset-entry-title=자산 항목 API에 대한 공개 액세스 (Automatic Translation)
 service-access-policy-entry-default-calendar-title=캘린더 검색 API에 대한 공용 액세스 (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=서비스 액세스 정책 이름 (Automatic Translation)
 service-access-policy-name-is-required=서비스 액세스 정책 이름이 필요합니다. (Automatic Translation)
 service-access-policy-title-is-required=서비스 액세스 정책 제목이 필요합니다. (Automatic Translation)
