--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -13350,6 +13350,7 @@ servers=Serveriai (Automatic Translation)
 service=Paslaugų (Automatic Translation)
 service-access-policy-entry-default-asset-entry-title=Vieša prieiga prie turto įrašo API (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Viešoji prieiga prie kalendoriaus ieškos API (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Tarnybos prieigos strategijos pavadinimas (Automatic Translation)
 service-access-policy-name-is-required=Būtinas tarnybos prieigos strategijos pavadinimas. (Automatic Translation)
 service-access-policy-title-is-required=Būtinas tarnybos prieigos strategijos pavadinimas. (Automatic Translation)
