--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -13350,6 +13350,7 @@ servers=Pelayan (Automatic Translation)
 service=Perkhidmatan (Automatic Translation)
 service-access-policy-entry-default-asset-entry-title=Akses Awam ke API Kemasukan Aset (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Akses Awam ke API Gelintar Kalendar (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nama Dasar Capaian Perkhidmatan (Automatic Translation)
 service-access-policy-name-is-required=Nama polisi capaian perkhidmatan diperlukan. (Automatic Translation)
 service-access-policy-title-is-required=Tajuk dasar capaian perkhidmatan diperlukan. (Automatic Translation)
