--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -13350,6 +13350,7 @@ servers=Tjenere
 service=Tjeneste
 service-access-policy-entry-default-asset-entry-title=Offentlig tilgang til ressursinnlegg-API
 service-access-policy-entry-default-calendar-title=Offentlig tilgang til kalendersøk-API
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Navn på policy for tjenestetilgang (Automatic Translation)
 service-access-policy-name-is-required=Policynavn for tjenestetilgang kreves. (Automatic Translation)
 service-access-policy-title-is-required=Policytittel for tjenestetilgang kreves. (Automatic Translation)
