--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -13353,6 +13353,7 @@ servers=Servers
 service=Service
 service-access-policy-entry-default-asset-entry-title=Publieke toegang tot de API voor assetinvoer
 service-access-policy-entry-default-calendar-title=Publieke toegang tot de zoek-API voor de kalender
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Naam beleid voor toegang tot service
 service-access-policy-name-is-required=Het servicetoegangsbeleid dient een naam te hebben.
 service-access-policy-title-is-required=Het servicetoegangsbeleid dient een titel te hebben.
