--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -13350,6 +13350,7 @@ servers=Serwery
 service=Usługa
 service-access-policy-entry-default-asset-entry-title=Publiczny dostęp do interfejsu API wpisu zasobu (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Publiczny dostęp do interfejsu API wyszukiwania kalendarza (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nazwa zasad dostępu do usługi (Automatic Translation)
 service-access-policy-name-is-required=Wymagana jest nazwa zasad dostępu do usługi. (Automatic Translation)
 service-access-policy-title-is-required=Wymagany jest tytuł zasad dostępu do usługi. (Automatic Translation)
