--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -13350,6 +13350,7 @@ servers=Servidores
 service=Serviço
 service-access-policy-entry-default-asset-entry-title=Acesso público para o API de Entrada de conteúdo
 service-access-policy-entry-default-calendar-title=Acesso público para o API de busca do calendário
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nome da Política de Acesso a Serviço
 service-access-policy-name-is-required=O nome da política de acesso a serviços é requerido.
 service-access-policy-title-is-required=O título para a política de acesso a serviços é requerido.
