--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -13352,6 +13352,7 @@ servers=Servidores
 service=Serviço
 service-access-policy-entry-default-asset-entry-title=Acesso público à API de Entrada de Ativos (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Acesso público à API de pesquisa de calendário (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nome da política de acesso ao serviço (Automatic Translation)
 service-access-policy-name-is-required=O nome da política de acesso a serviços é obrigatório.
 service-access-policy-title-is-required=O título para a política de acesso a serviços é obrigatório.
