--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -13350,6 +13350,7 @@ servers=Servere
 service=Servicii
 service-access-policy-entry-default-asset-entry-title=Accesul publicului la API-ul de intrare a activelor (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Acces public la API-ul căutare calendar (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Nume politică acces serviciu (Automatic Translation)
 service-access-policy-name-is-required=Este necesar numele politicii de acces la serviciu. (Automatic Translation)
 service-access-policy-title-is-required=Este necesar titlul politicii de acces la serviciu. (Automatic Translation)
