--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -13350,6 +13350,7 @@ servers=Серверы
 service=Сервис
 service-access-policy-entry-default-asset-entry-title=Публичный доступ к API входа в активы (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Публичный доступ к API поиска календаря (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Название политики доступа к службам (Automatic Translation)
 service-access-policy-name-is-required=Требуется название политики доступа к услугам. (Automatic Translation)
 service-access-policy-title-is-required=Требуется название политики доступа к услугам. (Automatic Translation)
