--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -13350,6 +13350,7 @@ servers=Servery
 service=Služba
 service-access-policy-entry-default-asset-entry-title=Verejný prístup k api položky majetku (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Prístup verejnosti k rozhraniam API vyhľadávania v kalendári (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Názov politiky prístupu k službe (Automatic Translation)
 service-access-policy-name-is-required=Meno politiky prístupu k službám je povinné.
 service-access-policy-title-is-required=Nadpis politiky prístupu k službám je povinný.
