--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -13350,6 +13350,7 @@ servers=Strežnik
 service=Storitev
 service-access-policy-entry-default-asset-entry-title=Javni dostop do API za vnos sredstev (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Javni dostop do API-ja za iskanje koledarja (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Ime pravilnika za dostop do storitev (Automatic Translation)
 service-access-policy-name-is-required=Zahtevano je ime pravilnika za dostop do storitve. (Automatic Translation)
 service-access-policy-title-is-required=Zahtevan je naslov pravilnika za dostop do storitve. (Automatic Translation)
