--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -13350,6 +13350,7 @@ servers=Servrar
 service=Tjänst
 service-access-policy-entry-default-asset-entry-title=Offentlig åtkomst till API för tillgångspost
 service-access-policy-entry-default-calendar-title=Offentlig åtkomst till API för kalendersökning
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Namn på tjänståtkomstprincip
 service-access-policy-name-is-required=Tjänståtkomstpolicy måste ha ett namn.
 service-access-policy-title-is-required=Tjänståtkomstpolicy måste ha en titel.
