--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -13350,6 +13350,7 @@ servers=சர்வர்கள்
 service=சேவை
 service-access-policy-entry-default-asset-entry-title=Public Access to the Asset Entry API (Automatic Copy)
 service-access-policy-entry-default-calendar-title=பொதுமக்களுக்கு நாள்காட்டி தேடல் API
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=சர்வீஸ் அக்சஸ் பாலிசியின் பெயர்
 service-access-policy-name-is-required=சர்வீஸ் அக்சஸ் பாலிசியின் பெயர் தேவைப்படுகிறது.
 service-access-policy-title-is-required=சர்வீஸ் அக்சஸ் பாலிசியின் தலைப்பு தேவைப்படுகிறது.
