--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -13350,6 +13350,7 @@ servers=เซิร์ฟเวอร์
 service=บริการ (Automatic Translation)
 service-access-policy-entry-default-asset-entry-title=การเข้าถึง API รายการแอสเสทแบบสาธารณะ
 service-access-policy-entry-default-calendar-title=การเข้าถึง API การค้นหาปฏิทินแบบสาธารณะ
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=ชื่อนโยบายการเข้าถึงบริการ (Automatic Translation)
 service-access-policy-name-is-required=ต้องระบุชื่อนโยบายการเข้าถึงบริการ (Automatic Translation)
 service-access-policy-title-is-required=ต้องระบุชื่อนโยบายการเข้าถึงบริการ (Automatic Translation)
