--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -13350,6 +13350,7 @@ servers=Sunucu
 service=Servis
 service-access-policy-entry-default-asset-entry-title=Varlık Girişi API'sine Genel Erişim (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Takvim Arama API'sine Genel Erişim (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Hizmet Erişim İlkesi Adı (Automatic Translation)
 service-access-policy-name-is-required=Hizmet erişim ilkesi adı gereklidir. (Automatic Translation)
 service-access-policy-title-is-required=Hizmet erişim ilkesi başlığı gereklidir. (Automatic Translation)
