--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -13350,6 +13350,7 @@ servers=Сервер
 service=Сервіс
 service-access-policy-entry-default-asset-entry-title=Загальнодоступний доступ до API вводу активів (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Загальнодоступний доступ до API пошуку в календарі (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Ім'я політики доступу до служби (Automatic Translation)
 service-access-policy-name-is-required=Потрібне ім'я політики доступу до служби. (Automatic Translation)
 service-access-policy-title-is-required=Потрібна назва політики доступу до служби. (Automatic Translation)
