--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -13350,6 +13350,7 @@ servers=Các máy chủ
 service=Dịch vụ
 service-access-policy-entry-default-asset-entry-title=Truy cập công khai vào API mục nhập tài sản (Automatic Translation)
 service-access-policy-entry-default-calendar-title=Truy cập công khai vào API Tìm kiếm Lịch (Automatic Translation)
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=Tên Chính sách Truy cập Dịch vụ (Automatic Translation)
 service-access-policy-name-is-required=Tên chính sách truy cập dịch vụ là bắt buộc. (Automatic Translation)
 service-access-policy-title-is-required=Tiêu đề chính sách truy cập dịch vụ là bắt buộc. (Automatic Translation)
