--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -13352,6 +13352,7 @@ servers=服务器
 service=服务
 service-access-policy-entry-default-asset-entry-title=资产条目 API 的公共访问权限
 service-access-policy-entry-default-calendar-title=日历搜索 API 的公共访问权限
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=服务访问政策名称
 service-access-policy-name-is-required=服务访问政策名称是必需的。
 service-access-policy-title-is-required=服务访问政策标题是必需的。
