--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -13351,6 +13351,7 @@ servers=伺服器
 service=服務
 service-access-policy-entry-default-asset-entry-title=資產條目 API 的公共訪問權限
 service-access-policy-entry-default-calendar-title=Calendar Search API 的公共存取權限
+service-access-policy-entry-default-object-title=Public Access to the Object Search API (Automatic Copy)
 service-access-policy-name=服務造訪政策名稱
 service-access-policy-name-is-required=服務存取政策名稱是必須的。
 service-access-policy-title-is-required=服務存取政策標題是必須的。
